fix: working-directory path 수정

--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -11,7 +11,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./android/OOTDAY
+        working-directory: ./OOTDAY
 
     permissions:
       contents: read
