--- a/OOTDAY/app/src/main/AndroidManifest.xml
+++ b/OOTDAY/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/pressed_login_button"
         android:supportsRtl="true"
         android:theme="@style/Theme.OOTDAY"
         tools:targetApi="31">
@@ -25,6 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.view.LoginView.LoginActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
