--- a/OOTDAY/app/src/main/AndroidManifest.xml
+++ b/OOTDAY/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/btn_pressed_login_button"
+        android:roundIcon="@drawable/ic_ootday_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.OOTDAY"
         tools:targetApi="31">
@@ -28,6 +28,14 @@
         <activity
             android:name=".presentation.view.loginView.LoginActivity"
             android:exported="false"/>
+        <activity
+            android:name=".presentation.view.signupView.activities.SignUpActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".presentation.view.signupView.activities.SignUpCongActivity"
+            android:exported="false"
+            />
     </application>
 
 </manifest>
