refactoring & feat : 주기능1 페이지 옷장, 홈화면 레이아웃 구성 완료 및 editText 포커스 문제 해결

--- a/OOTDAY/app/src/main/AndroidManifest.xml
+++ b/OOTDAY/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".presentation.view.signupView.activities.SignUpCongActivity"
             android:exported="false"
             />
+        <activity
+            android:name=".presentation.view.mainView.activities.MainActivity"
+            android:exported="false"
+            />
     </application>
 
 </manifest>
