feat : 프로필 레이아웃(내옷장, 다이얼로그) 추가 구성 완료 + 탈퇴, 로그아웃 로직 구현 완

--- a/OOTDAY/app/src/main/AndroidManifest.xml
+++ b/OOTDAY/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:roundIcon="@drawable/ic_ootday_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.OOTDAY"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".presentation.view.splashActivity.SplashActivity"
             android:exported="true">
