ref : 백엔드 연결 - 회원가입join, sms-인증번호 발송, 확인, feat : 설문조사 로직 및 레이아웃 구성 완료

--- a/OOTDAY/app/src/main/AndroidManifest.xml
+++ b/OOTDAY/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:exported="false"
             />
         <activity
+            android:name=".presentation.view.surveyView.HomeSurveyActivity"
+            android:exported="false"
+            />
+        <activity
             android:name=".presentation.view.mainView.activities.MainActivity"
             android:exported="false"
             />
